--- a/views/services.hbs
+++ b/views/services.hbs
@@ -57,8 +57,8 @@
               </section>
         </section>
 
-        <section class="border-b border-gray-300 border-opacity-25  bg-secondary">
-          <section class="  text-lg p-12 bg-secondary md:p-20 lg:p-20">
+        <section class="bg-secondary">
+          <section class="text-lg p-12 bg-secondary md:p-20 lg:p-20">
             <h2 class="text-4xl text-left py-4 mx-4 font-medium font-sans xl:text-4xl xl:mt-32">Educate Your Workforce Like Never Before</h2>
             <hr class=" w-3/4 py-4 font-thin mx-4">
             <section class="tracking-widest text-left xl:text-2xl mx-4">
@@ -434,8 +434,8 @@
               </section>
         </section>
 
-        <section class="  bg-secondary">
-          <section class="  text-lg p-12 bg-secondary md:p-20 lg:p-20">
+        <section class="bg-secondary">
+          <section class="border-b border-gray-300 border-opacity-25  text-lg p-12 bg-secondary md:p-20 lg:p-20">
             <h2 class="text-3xl text-center py-4 mx-4 font-medium font-sans">Educate Your Workforce Like Never Before</h2>
             <hr class=" w-3/4 py-4 font-thin mx-auto">
             <section class="tracking-widest text-center mx-4">
@@ -454,10 +454,10 @@
           </section>
         </section>
 
-        <section class="  bg-secondary">
-          <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
-            <section class="mx-auto mt-10 w-2/3">
-              <h2 class="text-3xl font-medium uppercase py-4 mx-4 mt-50 text-center font-sans">Codex Authoring</h2>
+        <section class="bg-secondary">
+          <section class="border-b border-gray-300 border-opacity-25 authoring lg:flex m-auto md:p-20 lg:p-20">
+            <section class="mx-auto mt-10 w-2/3 -mb-20">
+              <h2 class="text-3xl font-medium uppercase py-4 mx-4 mt-16 text-center font-sans">Codex Authoring</h2>
               <hr class="mx-auto">
               <h4 class="text-xl font-medium my-4 text-center">Fully Customize Your Simulations</h4>
               <ul class="text-md">
@@ -472,17 +472,16 @@
                 </li>
               </ul>
             </section>
-            <div class="mr-3 imgSize1">
+            <div class="mr-3 imgSize1 mb-10">
               <!--IMG IS IN THE CSS BCKGRND -->
             </div>
           </section>
         </section>
 
-
-        <section class="  bg-secondary">
-          <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
-            <section class="mx-auto w-2/3">
-              <h1 class="text-3xl font-medium uppercase py-4 mx-4 mt-50 text-center font-sans">Codex Simulator</h1>
+        <section class="bg-secondary">
+          <section class="border-b border-gray-300 border-opacity-25 authoring lg:flex m-auto md:p-20 lg:p-20">
+            <section class="mx-auto mt-10 w-2/3 -mb-20">
+              <h1 class="text-3xl font-medium uppercase py-4 mx-4 mt-16 text-center font-sans">Codex Simulator</h1>
               <hr>
               <h4 class="text-xl font-medium my-4 text-center">Highly Realistic, Interactive VR</h4>
               <ul class="">
@@ -497,7 +496,7 @@
                 </li>
               </ul>
            </section>
-            <div class="mr-3 imgSize2">
+            <div class="mr-3 imgSize2  mb-10">
               <!--IMG IS IN THE CSS BCKGRND -->
             </div>
           </section>
@@ -505,10 +504,10 @@
 
 
 
-          <section class="  bg-secondary">
-            <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
-              <section class="mx-auto w-2/3 ">
-                <h1 class="text-3xl font-medium uppercase py-4 mx-4 mt-50 text-center font-sans">Codex Analytics</h1>
+          <section class="bg-secondary">
+            <section class="border-b border-gray-300 border-opacity-25 authoring lg:flex m-auto md:p-20 lg:p-20">
+              <section class="mx-auto mt-10 w-2/3 -mb-20">
+                <h1 class="text-3xl font-medium uppercase py-4 mx-4 mt-16 text-center font-sans">Codex Analytics</h1>
                 <hr>
                 <h4 class="text-xl font-medium my-4 text-center">Robust Data Analytics</h4>
                 <ul>
@@ -523,16 +522,16 @@
                   </li>
                 </ul>
               </section>
-              <div class="mr-3 imgSize3">
+              <div class="mr-3 imgSize3  mb-10">
                 <!--IMG IS IN THE CSS BCKGRND -->
               </div>
             </section>
           </section>
 
-          <section class="  bg-secondary">
-            <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
+          <section class="bg-secondary">
+            <section class="border-b border-gray-300 border-opacity-25 authoring lg:flex m-auto md:p-20 lg:p-20">
               <section class="mx-auto w-2/3 ">
-                <h1 class="text-3xl font-medium uppercase py-4 mx-4 mt-50 text-center font-sans">Leverage low-cost VR</h1>
+                <h1 class="text-3xl font-medium uppercase py-4 mx-4 mt-16 text-center font-sans">Leverage low-cost VR</h1>
                 <hr>
                 <h4 class="text-xl font-medium my-4"></h4>
                 <ul>
@@ -547,16 +546,16 @@
                   </li>
                 </ul>
               </section>
-              <div class="mr-3 imgSize4">
+              <div class="mr-3 imgSize4  mb-10">
                 <!--IMG IS IN THE CSS BCKGRND -->
               </div>
             </section>
           </section>
 
-          <section class="  bg-secondary">
-            <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
+          <section class="bg-secondary">
+            <section class="border-b border-gray-300 border-opacity-25 authoring lg:flex m-auto md:p-20 lg:p-20">
               <section class="mx-auto w-2/3 ">
-                <h1 class="text-3xl font-medium uppercase py-4 mx-4 mt-50 text-center font-sans">Personalized and Relevant Content
+                <h1 class="text-3xl font-medium uppercase py-4 mx-4 mt-20 text-center font-sans">Personalized and Relevant Content
 </h1>
                 <hr>
                 <h4 class="text-xl font-medium my-4"></h4>
@@ -569,16 +568,16 @@
                     </li>
                 </ul>
               </section>
-              <div class="mr-3 imgSize5">
+              <div class="mr-3 imgSize5  mb-10">
                 <!--IMG IS IN THE CSS BCKGRND -->
               </div>
             </section>
           </section>
 
-          <section class="  bg-secondary">
-            <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
+          <section class="bg-secondary">
+            <section class="border-b border-gray-300 border-opacity-25 authoring lg:flex m-auto md:p-20 lg:p-20">
               <section class="mx-auto w-2/3 ">
-                <h1 class="text-3xl font-medium uppercase py-4 mx-4 mt-50 text-center font-sans">Scalable Collaboration</h1>
+                <h1 class="text-3xl font-medium uppercase py-4 mx-4 mt-20 text-center font-sans">Scalable Collaboration</h1>
                 <hr>
                 <h4 class="text-xl font-medium my-4"></h4>
                 <ul>
@@ -590,7 +589,7 @@
                     </li>
                 </ul>
               </section>
-              <div class="mr-3 imgSize6">
+              <div class="mr-3 imgSize6  mb-10">
                 <!--IMG IS IN THE CSS BCKGRND -->
               </div>
             </section>
