Fix Partners page margins and details

--- a/views/partners.hbs
+++ b/views/partners.hbs
@@ -47,19 +47,25 @@
               </div>
            </section>
 
+
+                      <div class="blackBlock bg-secondary h-2 w-full">
+                        <!--EMPTY DIV FOR SPACE -->
+                      </div>
+
            <!-- - - - - - - - - Airforce ---------------->
-           <section class="mb-4 background first">
-              <section class="text-primary body-font">
-                <h1 class="text-primary text-center font-medium sm:text-4xl text-3xl lg:text-4xl lg:ml-64 xl:ml-40 xl:text-4xl mt-10 -mb-16 font-sans ">Air Craft Maintenance</h1>
+           <section class="mb-4 background first border-primary">
+             <hr class="mt-32 border-primary w-full mx-auto">
+              <section class="text-primary body-font ml-16">
+                <h1 class="text-primary text-center font-medium sm:text-4xl text-3xl lg:text-4xl lg:ml-56 xl:text-4xl mt-10 -mb-16 font-sans mx-auto">Air Craft Maintenance</h1>
                 <section class="text-gray-700 body-font">
                    <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
                      <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
                         <!--EMPTY DIV FOR SPACE -->
                      </div>
-                     <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
-                       <h2 class="title-font sm:text-2xl text-3xl lg:ml-10 mb-4 font-medium text-primary">
-                         <span>Client: <b>U.S. Airforce</b></span>
-                         <span class="ml-48">Platform </span>
+                     <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center lg:text-left">
+                       <h2 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary">
+                         <span>U.S. Airforce</span>
+                         <span class="ml-48">HTC Vive</span>
                        </h2>
 
                        <p class="mb-8 leading-relaxed text-primary lg:text-xl xl:text-2xl">Air Force Instructors struggle to ensure their airmen are prepared for the complexity of aircraft maintenance; units often don't have access to instructional aircraft or have limited time to utilize physical training simulators. Virtual Reality can address these shortages while ensuring airmen have an engaging learning resource to prepare for their mission.
@@ -73,12 +79,19 @@
                    </div>
                  </section>
               </section>
+               <hr class="border-primary w-full mx-auto">
            </section>
+
+
+                      <div class="blackBlock bg-secondary h-40 w-full">
+                        <!--EMPTY DIV FOR SPACE -->
+                      </div>
 
            <!-- - - - - - - - - WIND TURBINES ---------------->
            <section class="mb-4    background second">
-              <section class="text-primary body-font">
-                <h1 class="text-primary text-center font-medium sm:text-4xl text-3xl mt-10 -mb-16 font-sans xl:text-4xl">Wind Turbines</h1>
+             <hr class="mt-32 border-primary w-full mx-auto">
+              <section class="text-primary body-font ml-16">
+                <h1 class="text-primary text-center font-medium sm:text-4xl text-3xl lg:text-4xl lg:ml-24 xl:text-4xl mt-10 -mb-16 font-sans mx-auto">Wind Turbines</h1>
                 <section class="text-gray-700 body-font">
                    <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
                      <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
@@ -86,8 +99,8 @@
                      </div>
                      <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
                        <h2 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary">
-                         <span>Client </span>
-                         <span class="hidden lg:inline-block ml-48">Platform </span>
+                         <span>Siemens Gamesa</span>
+                         <span class="hidden lg:inline-block ml-48">Mobile</span>
                        </h2>
                        <p class="mb-8 leading-relaxed text-primary xl:text-2xl">VINCI is working with Siemens Gamesa Renewable Energy to prototype training solutions for safety equipment in their offshore wind turbine division. Currently, training is focused on helping workers identify errors on safety/fall harnesses. SGRE is challenged with visually showing defects on harnesses to their workforce, but must juggle the costs of doing so as demonstrating defects could damage expensive harnesses. VR can simulate an endless combination of possible defects at no cost, providing an immense amount of training opportunities for their workforce.  </p>
                        <div class="flex justify-center">
@@ -97,20 +110,27 @@
                    </div>
                  </section>
               </section>
-           </section>
+              <hr class="border-primary w-full mx-auto">
+          </section>
+
+
+                     <div class="blackBlock bg-secondary h-40 w-full">
+                       <!--EMPTY DIV FOR SPACE -->
+                     </div>
 
            <!-- - - - - - - - - Soldier Training ---------------->
             <section class="mb-4    background third">
-              <section class="text-primary body-font">
-                <h1 class="text-primary text-center font-semibold sm:text-4xl text-3xl mt-10 -mb-16 font-sans xl:text-4xl">Soldier Training</h1>
+              <hr class="mt-32 border-primary w-full mx-auto">
+              <section class="text-primary body-font ml-16">
+                <h1 class="text-primary text-center font-medium sm:text-4xl text-3xl lg:text-4xl lg:ml-24 xl:text-4xl mt-10 -mb-16 font-sans mx-auto">Soldier Training</h1>
                 <section class="text-gray-700 body-font">
                    <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
                      <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
                        <img class="object-cover object-center rounded" alt="" src="">
                      </div>
                      <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
-                       <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary"><span>Client </span>
-                         <span class="hidden lg:inline-block ml-48">Platform </span>
+                       <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary"><span>U.S. Army</span>
+                         <span class="hidden lg:inline-block ml-48">HTC Vive</span>
                        </h1>
                        <p class="mb-8 leading-relaxed text-primary xl:text-2xl">VINCI is producing Virtual Reality based training solutions for soldiers in conjunction with US Army researchers at Natick Soldier Research Center and Tufts Center for Applied Brain and Cognitive Sciences.
                         <br><br>
@@ -122,21 +142,28 @@
                    </div>
                  </section>
               </section>
-           </section>
+              <hr class="border-primary w-full mx-auto">
+          </section>
+
+
+                     <div class="blackBlock bg-secondary h-40 w-full">
+                       <!--EMPTY DIV FOR SPACE -->
+                     </div>
 
 
           <!-- - - - - - - - - SafetyDNA VR ---------------->
             <section class="mb-4    background fourth">
-              <section class="text-primary body-font">
-                <h1 class="text-primary font-semibold text-center sm:text-4xl text-3xl mt-10 -mb-16 font-sans xl:text-4xl">SafetyDNA VR</h1>
+              <hr class="mt-32 border-primary w-full mx-auto">
+              <section class="text-primary body-font ml-16">
+                <h1 class="text-primary text-center font-medium sm:text-4xl text-3xl lg:text-4xl lg:ml-24 xl:text-4xl mt-10 -mb-16 font-sans mx-auto">SafetyDNA VR</h1>
                 <section class="text-gray-700 body-font">
                    <div class="container mx-auto flex px-5 py-10 md:flex-row flex-col items-center">
                      <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 mt-4">
                        <img class="object-cover object-center rounded" alt="" src="">
                      </div>
                      <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
-                       <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary"><span>Client </span>
-                         <span class="hidden lg:inline-block ml-48">Platform </span>
+                       <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary"><span>Select Int.</span>
+                         <span class="hidden lg:inline-block ml-48">HTC Vive</span>
                        </h1>
                        <p class="mb-8 leading-relaxed text-primary xl:text-2xl">
                          Teaching personal safety in the automobile manufacturing industry is a difficult task, but it is a deparately needed one. Every year, thousands of Americans are injured on manufacturing floors due to largely preventable causes.
@@ -150,7 +177,13 @@
                    </div>
                  </section>
               </section>
-           </section>
+              <hr class="border-primary w-full mx-auto">
+          </section>
+
+
+                     <div class="blackBlock bg-secondary h-40 w-full">
+                       <!--EMPTY DIV FOR SPACE -->
+                     </div>
 
 
            <section class="  ">
@@ -338,7 +371,7 @@
                       </h2>
                       <h4 class="title-font text-xl mb-4 font-medium text-primary">
                         <span class="-ml-6">U.S. Air Force</span>
-                        <span class="inline-block ml-24">HTC Vive </span>
+                        <span class="inline-block ml-24">HTC Vive</span>
                       </h4>
                       <p class="text-left text-lg bg-gray-900 bg-opacity-25 p-2 mb-8 leading-relaxed text-primary">Air Force Instructors struggle to ensure their airmen are prepared for the complexity of aircraft maintenance; units often don't have access to instructional aircraft or have limited time to utilize physical training simulators. Virtual Reality can address these shortages while ensuring airmen have an engaging learning resource to prepare for their mission.
                         <br><br>
@@ -369,7 +402,7 @@
                       </h2>
                       <h4 class="title-font text-xl px-10 mb-4 font-medium text-primary">
                         <span class="-ml-16">Siemens Gamesa</span>
-                        <span class="inline-block ml-10 pl-8">Mobile </span>
+                        <span class="inline-block ml-10 pl-8">Mobile</span>
                       </h4>
                       <p class="text-left text-lg bg-gray-900 bg-opacity-25 p-2 mb-8 leading-relaxed text-primary">VINCI is working with Siemens Gamesa Renewable Energy to prototype training solutions for safety equipment in their offshore wind turbine division. Currently, training is focused on helping workers identify errors on safety/fall harnesses. SGRE is challenged with visually showing defects on harnesses to their workforce, but must juggle the costs of doing so as demonstrating defects could damage expensive harnesses. VR can simulate an endless combination of possible defects at no cost, providing an immense amount of training opportunities for their workforce.  </p>
                       <div class="flex justify-center">
@@ -396,8 +429,8 @@
                         <span class="inline-block ml-20">Platform </span>
                       </h1>
                       <h4 class="title-font text-xl mb-4 font-medium text-primary">
-                        <span class="-ml-6">U.S. Army </span>
-                        <span class="inline-block ml-20">HTC Vive </span>
+                        <span class="-ml-6">U.S. Army</span>
+                        <span class="inline-block ml-20">HTC Vive</span>
                       </h4>
                       <p class="text-left text-lg bg-gray-900 bg-opacity-25 p-2 mb-8 leading-relaxed text-primary">VINCI is producing Virtual Reality based training solutions for soldiers in conjunction with US Army researchers at Natick Soldier Research Center and Tufts Center for Applied Brain and Cognitive Sciences.
                        <br><br>
