Modify text size for partner labels large screens

--- a/views/partners.hbs
+++ b/views/partners.hbs
@@ -63,7 +63,7 @@
                         <!--EMPTY DIV FOR SPACE -->
                      </div>
                      <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center lg:text-left">
-                       <h2 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary">
+                       <h2 class="title-font sm:text-2xl text-3xl lg:text-2xl mb-4 font-medium text-primary">
                          <span>U.S. Airforce</span>
                          <span class="ml-48">HTC Vive</span>
                        </h2>
@@ -98,7 +98,7 @@
                        <img class="object-cover object-center rounded p-4" alt="" src="">
                      </div>
                      <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
-                       <h2 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary">
+                       <h2 class="title-font sm:text-2xl text-3xl lg:text-2xl mb-4 font-medium text-primary">
                          <span>Siemens Gamesa</span>
                          <span class="hidden lg:inline-block ml-48">Mobile</span>
                        </h2>
@@ -129,7 +129,7 @@
                        <img class="object-cover object-center rounded" alt="" src="">
                      </div>
                      <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
-                       <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary"><span>U.S. Army</span>
+                       <h1 class="title-font sm:text-2xl text-3xl lg:text-2xl mb-4 font-medium text-primary"><span>U.S. Army</span>
                          <span class="hidden lg:inline-block ml-48">HTC Vive</span>
                        </h1>
                        <p class="mb-8 leading-relaxed text-primary xl:text-2xl">VINCI is producing Virtual Reality based training solutions for soldiers in conjunction with US Army researchers at Natick Soldier Research Center and Tufts Center for Applied Brain and Cognitive Sciences.
@@ -162,7 +162,7 @@
                        <img class="object-cover object-center rounded" alt="" src="">
                      </div>
                      <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
-                       <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary"><span>Select Int.</span>
+                       <h1 class="title-font sm:text-2xl text-3xl lg:text-2xl mb-4 font-medium text-primary"><span>Select Int.</span>
                          <span class="hidden lg:inline-block ml-48">HTC Vive</span>
                        </h1>
                        <p class="mb-8 leading-relaxed text-primary xl:text-2xl">
@@ -365,11 +365,11 @@
                        <!--EMPTY DIV FOR SPACE -->
                     </div>
                     <div class="lg:flex-grow md:w-1/2 p-2 flex flex-col md:items-start md:text-left items-center text-center">
-                      <h2 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary">
+                      <h2 class="title-font sm:text-2xl text-3xl lg:text-2xl mb-4 font-medium text-primary">
                         <span class="-ml-4">Client</span>
                         <span class="inline-block ml-20">Platform </span>
                       </h2>
-                      <h4 class="title-font text-xl mb-4 font-medium text-primary">
+                      <h4 class="title-font text-xl lg:text-2xl mb-4 font-medium text-primary">
                         <span class="-ml-6">U.S. Air Force</span>
                         <span class="inline-block ml-24">HTC Vive</span>
                       </h4>
@@ -396,11 +396,11 @@
 
                     </div>
                     <div class="lg:flex-grow md:w-1/2 p-2 flex flex-col md:items-start md:text-left items-center text-center">
-                      <h2 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary">
+                      <h2 class="title-font sm:text-2xl text-3xl lg:text-2xl mb-4 font-medium text-primary">
                         <span class="-ml-4">Client </span>
                         <span class="inline-block ml-20">Platform </span>
                       </h2>
-                      <h4 class="title-font text-xl px-10 mb-4 font-medium text-primary">
+                      <h4 class="title-font text-xl lg:text-2xl px-10 mb-4 font-medium text-primary">
                         <span class="-ml-16">Siemens Gamesa</span>
                         <span class="inline-block ml-10 pl-8">Mobile</span>
                       </h4>
@@ -424,11 +424,11 @@
                       <img class="object-cover object-center rounded" alt="" src="">
                     </div>
                     <div class="lg:flex-grow md:w-1/2 p-2 flex flex-col md:items-start md:text-left items-center text-center">
-                      <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary">
+                      <h1 class="title-font sm:text-2xl text-3xl lg:text-2xl mb-4 font-medium text-primary">
                         <span class="-ml-4">Client </span>
                         <span class="inline-block ml-20">Platform </span>
                       </h1>
-                      <h4 class="title-font text-xl mb-4 font-medium text-primary">
+                      <h4 class="title-font text-xl lg:text-2xl mb-4 font-medium text-primary">
                         <span class="-ml-6">U.S. Army</span>
                         <span class="inline-block ml-20">HTC Vive</span>
                       </h4>
@@ -454,11 +454,11 @@
                        <img class="object-cover object-center rounded" alt="" src="">
                      </div>
                      <div class="lg:flex-grow md:w-1/2 p-2 flex flex-col md:items-start md:text-left items-center text-center">
-                       <h1 class="title-font sm:text-2xl text-3xl mb-4 font-medium text-primary">
+                       <h1 class="title-font sm:text-2xl text-3xl lg:text-2xl mb-4 font-medium text-primary">
                          <span class="-ml-4">Client</span>
                          <span class="inline-block ml-20">Platform </span>
                        </h1>
-                       <h4 class="title-font text-xl mb-4 font-medium text-primary">
+                       <h4 class="title-font text-xl lg:text-2xl mb-4 font-medium text-primary">
                          <span class="-ml-6">Select Int.</span>
                          <span class="inline-block ml-20">HTC Vive</span>
                        </h4>
