--- a/views/careers.hbs
+++ b/views/careers.hbs
@@ -107,9 +107,9 @@
         </section>
 
 
-        <section class=" ">
-          <section class="bg-secondary">
-             <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 lg:mt-10 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
+        <section class="  ">
+          <section class="bg-secondary   ">
+             <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
                <h1 class ="text-primary text-center text-4xl font-sans xl:mt-12">Want to Learn More About VR Training?</h1>
                <div class="flex flex-col justify-center mt-32 xl:mt-40">
                   <a class="flex flex-col justify-center" href="/blogs">
