Fix label margins on Partners page

--- a/views/partners.hbs
+++ b/views/partners.hbs
@@ -65,7 +65,7 @@
                      <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center lg:text-left">
                        <h2 class="title-font sm:text-2xl text-3xl lg:text-2xl mb-4 font-medium text-primary">
                          <span>U.S. Airforce</span>
-                         <span class="ml-48">HTC Vive</span>
+                         <span class="ml-12 xl:ml-48">HTC Vive</span>
                        </h2>
 
                        <p class="mb-8 leading-relaxed text-primary lg:text-xl xl:text-2xl">Air Force Instructors struggle to ensure their airmen are prepared for the complexity of aircraft maintenance; units often don't have access to instructional aircraft or have limited time to utilize physical training simulators. Virtual Reality can address these shortages while ensuring airmen have an engaging learning resource to prepare for their mission.
@@ -100,7 +100,7 @@
                      <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
                        <h2 class="title-font sm:text-2xl text-3xl lg:text-2xl mb-4 font-medium text-primary">
                          <span>Siemens Gamesa</span>
-                         <span class="hidden lg:inline-block ml-48">Mobile</span>
+                         <span class="hidden lg:inline-block ml-12 xl:ml-48">Mobile</span>
                        </h2>
                        <p class="mb-8 leading-relaxed text-primary xl:text-2xl">VINCI is working with Siemens Gamesa Renewable Energy to prototype training solutions for safety equipment in their offshore wind turbine division. Currently, training is focused on helping workers identify errors on safety/fall harnesses. SGRE is challenged with visually showing defects on harnesses to their workforce, but must juggle the costs of doing so as demonstrating defects could damage expensive harnesses. VR can simulate an endless combination of possible defects at no cost, providing an immense amount of training opportunities for their workforce.  </p>
                        <div class="flex justify-center">
@@ -130,7 +130,7 @@
                      </div>
                      <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
                        <h1 class="title-font sm:text-2xl text-3xl lg:text-2xl mb-4 font-medium text-primary"><span>U.S. Army</span>
-                         <span class="hidden lg:inline-block ml-48">HTC Vive</span>
+                         <span class="hidden lg:inline-block ml-12 xl:ml-48">HTC Vive</span>
                        </h1>
                        <p class="mb-8 leading-relaxed text-primary xl:text-2xl">VINCI is producing Virtual Reality based training solutions for soldiers in conjunction with US Army researchers at Natick Soldier Research Center and Tufts Center for Applied Brain and Cognitive Sciences.
                         <br><br>
@@ -163,7 +163,7 @@
                      </div>
                      <div class="lg:flex-grow md:w-1/2 p-12 flex flex-col md:items-start md:text-left items-center text-center">
                        <h1 class="title-font sm:text-2xl text-3xl lg:text-2xl mb-4 font-medium text-primary"><span>Select Int.</span>
-                         <span class="hidden lg:inline-block ml-48">HTC Vive</span>
+                         <span class="hidden lg:inline-block ml-12 xl:ml-48">HTC Vive</span>
                        </h1>
                        <p class="mb-8 leading-relaxed text-primary xl:text-2xl">
                          Teaching personal safety in the automobile manufacturing industry is a difficult task, but it is a deparately needed one. Every year, thousands of Americans are injured on manufacturing floors due to largely preventable causes.
