--- a/views/about.hbs
+++ b/views/about.hbs
@@ -510,10 +510,9 @@
       <!-- =====================================================================beginning of main mobile view container =============================================================-->
 
       <!-- beginning of main mobile view container -->
+
+      <!--================== NAV SECTION ==================-->
       <section class="mobile-main">
-        <!--==================
-         NAV SECTION
-        ==================-->
         <section class="mobile-nav-test bg-red-100 z-10">
           <nav id="hamnav">
               <!-- [THE HAMBURGER] -->
