--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -20,7 +20,7 @@
     </style>
     <section id = "container">
       <div class="main-wrapper">
-        <section id="cover" class="bg-center bg-cover text-primary lg:h-screen background cover overflow-hidden" style="background-image: url('../public/img/contact-hero-img.png')">
+        <section id="cover" class="w-full h-screen bg-center bg-cover text-primary lg:h-screen background cover overflow-hidden" style="background-image: url('../public/img/contact-hero-img.png')">
           <header class="text-gray-700 body-font ">
               <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
                 <a href="/" class="flex items-center mb-4 md:mb-0 lg:-mb-6 xl:-mb-8">
@@ -245,7 +245,7 @@
            </style>
        </section>
 
-       <section id="cover" class="bg-center bg-cover text-primary   background cover overflow-hidden" style="background-image: url('../public/img/contact-hero-img.png')">
+       <section id="cover" class="w-full h-screen bg-center bg-cover text-primary   background cover overflow-hidden" style="background-image: url('../public/img/contact-hero-img.png')">
          <header class="text-gray-700 body-font ">
 
              <!-- <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center"> -->
