partners page header adjusted

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -229,7 +229,7 @@
            </style>
        </section>
 
-       <section id="cover" class="bg-center bg-cover text-primary   background cover overflow-hidden" style="background-image: url('../public/img/contact-hero-img.png')">
+       <section id="cover" class="bg-center bg-cover text-primary background hero-section h-screen" style="background-image: url('../public/img/contact-hero-img.png')">
          <header class="text-gray-700 body-font ">
 
              <!-- <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center"> -->
@@ -247,8 +247,8 @@
              </div>
          </header>
          <hr class="-mt-4">
-         <h1 class="text-left tracking-wider p-4 mt-56 -mb-4 text-3xl font-sans font-semibold">CONTACT</h1>
-         <div class="tracking-widest text-left p-4 mt-10">
+         <h2 class="text-left tracking-wider p-4 mt-64 -mb-4 text-3xl font-sans font-semibold uppercase">CONTACT</h2>
+         <div class="tracking-widest text-left p-4 mt-2">
            <p>Have any questions?</p>
            <p>Drop us a message.</p>
            <p>Book a demo.</p>
@@ -257,7 +257,7 @@
 
         <section class=" bg-center bg-covermb-4   background first" style="background-image: url('../public/img/contact-bg.png')">
           <section class="text-gray-700 body-font relative">
-            <div class="container px-5 py-24 mx-auto flex sm:flex-no-wrap flex-wrap">
+            <div class="container px-5 py-24 mx-auto -mb-32 flex sm:flex-no-wrap flex-wrap">
             <div class="bg-opacity-75 lg:w-2/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
                 <h2 class="text-primary text-3xl mb-8 font-medium title-font text-center">Contact VINCI</h2>
                  <hr class="mx-auto w-4/5 mb-8">
