--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -48,7 +48,7 @@
          </section>
 
 
-         <section class="px-16 bg-center bg-cover lg:mb-0 mb-4 lg:h-screen background first" style="background-image: url('../public/img/contact-bg.png')">
+         <section class="px-16 bg-center bg-cover lg:mb-0 mb-4 lg:-mb-32 lg:h-screen background first" style="background-image: url('../public/img/contact-bg.png')">
            <section class="text-gray-700 body-font relative">
              <div class=" container px-5 py-24 mx-auto flex sm:flex-no-wrap flex-wrap">
              <div class="bg-opacity-75 lg:w-2/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
@@ -62,7 +62,7 @@
                    <p class="text-xs text-gray-500 mt-3"></p>
                  </div>
 
-               <div class=" md:w-5/12 rounded-lg sm:mr-10 mt-24 flex -ml-20 object-cover">
+               <div class=" md:w-5/12 rounded-lg sm:mr-10  mt-24 flex -ml-20 object-cover">
                  <h2 class="text-primary text-xl text-thin text-left tracking-widest leading-10 xl:text-2xl xl:mt-10">Here at Vinci, we believe in making simulated training more efficient and accessible.
                   If you think this tool is right for your team, please reach out to schedule a call or a demo.</h2>
                  <img  class="" src="../public/img/placeholder.png" alt="">
