--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -75,7 +75,7 @@
        <section class="  ">
          <section class="bg-secondary   ">
            <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
-             <h1 class ="text-primary text-center text-4xl font-sans xl:mt-12">Want to Learn More About VR Training?</h1>
+             <h1 class ="text-primary text-center text-4xl font-sans lg:mt-12 xl:mt-12">Want to Learn More About VR Training?</h1>
              <div class="flex flex-col justify-center mt-32 xl:mt-40">
                 <a class="flex flex-col justify-center" href="/blogs">
                   <button class="w-1/4 mx-auto text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg xl:text-2xl">Check Out Our Blogs</button>
